--- a/VRChat/01/1328501.html
+++ b/VRChat/01/1328501.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "14s/MtKWzLaFm7RNIEi7idx9zdRkoo5fTQqaGrKRyVc="></script>
+    "Ges5Er2VQ8PvFOCbVbwDSxqYvBjmc1nuPNWZDstrqw0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY-K 002】fbxモデル","description":"かっこいい刀です。\n展開アニメーションはこんな感じです。\n https://twitter.com/ALERT_jp_555/status/1120570767333216256\n\n導入解説を付けていますが、理解するにはそれなりのunity知識を必要とします。不明な点があればtwitterまでご連絡ください。\n\n※追記:SDK3での動作想定をしていませんでしたが、簡易的な説明を導入解説に追加しました。","url":"https://booth.pm/ja/items/1328501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1328501/8fd57213-7f1f-4475-9976-14364d34ef36_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="14s/MtKWzLaFm7RNIEi7idx9zdRkoo5fTQqaGrKRyVc="></script>
+    nonce="Ges5Er2VQ8PvFOCbVbwDSxqYvBjmc1nuPNWZDstrqw0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1328501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1328501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
