--- a/VRChat/82/1328182.html
+++ b/VRChat/82/1328182.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2VvZROuoS7Gp7OLWubhCWCG4DrU1YkiSxxJ0ht2/FmE="></script>
+    "dvR+Ky7KcFq9A21SEFJACTi0NHav9W7+apHQzWsLIr4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"EarEaring耳のイヤリング","description":"耳に耳","url":"https://booth.pm/ja/items/1328182","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/82009356-ef4d-412b-a19a-1c85fdcfa899/i/1328182/47c85513-1616-4d43-be9d-4721e1143321_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2VvZROuoS7Gp7OLWubhCWCG4DrU1YkiSxxJ0ht2/FmE="></script>
+    nonce="dvR+Ky7KcFq9A21SEFJACTi0NHav9W7+apHQzWsLIr4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1328182/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1328182/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
