--- a/VRChat/13/1328013.html
+++ b/VRChat/13/1328013.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6Rhea4+6hdMWUbXi3QJQQI9BHSMLG4EyHyZ4oJMbaRc="></script>
+    "3Vf4RrVewOHAURbWD0SyvZbdF7bPkTqDtg8wFBJau+k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"600億$$のグラス","description":"賞金首のようなサングラス\nつけてもエンジェルアームは出せません。","url":"https://booth.pm/ja/items/1328013","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1328013/cb5859d8-d1d3-435e-a53d-2fa8467fb99a_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6Rhea4+6hdMWUbXi3QJQQI9BHSMLG4EyHyZ4oJMbaRc="></script>
+    nonce="3Vf4RrVewOHAURbWD0SyvZbdF7bPkTqDtg8wFBJau+k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1328013/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               174
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1328013/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               174
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
