--- a/VRChat/37/1319037.html
+++ b/VRChat/37/1319037.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "q391orU1eKZgp998d1Rkv2dJr7BQvgfkyMdDrvTvv3w="></script>
+    "P8/6lbVdJxk5+/KBlch7bxX8J9+h22Zh7xocLt210yM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ペンチとラジオペンチのセット","description":"ペンチとラジオペンチです。開閉アニメーションつき。\nペンチは△1144\nラジオペンチは△936です。\nzipの中身はunitypackageとfbxが入ってます。\n\n改変などはご自由にどうぞ。\n\n再配布は禁止でお願いします。","url":"https://booth.pm/ja/items/1319037","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b7c0eb1d-5d94-4420-9b1c-2f029c0e3ac6/i/1319037/b70a61b6-e44a-4642-8e1c-c269ca25d547_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q391orU1eKZgp998d1Rkv2dJr7BQvgfkyMdDrvTvv3w="></script>
+    nonce="P8/6lbVdJxk5+/KBlch7bxX8J9+h22Zh7xocLt210yM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319037/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319037/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
