--- a/VRChat/42/1327242.html
+++ b/VRChat/42/1327242.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kh0JUCve3+wgk3yBqkbnM1C4paLW/nB1z+V11yvzZbk="></script>
+    "+srnm9LSC4XCbU+O2DBO5oDFlmqulL7GksfdS2iawj0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY Over and Under Shotgun】上下二連散弾銃 fbxモデル","description":"シンプルな上下二連散弾銃です。\nボーンのRotateでブレイクオープンします。\nブレイクオープンした時にショットシェルが飛び出すようなパーティクルも入れています。\nリロードモーションを再現するには少しのunityアニメーション知識を必要とします。\n\nパーティクルの動作です。\n https://twitter.com/ALERT_jp_555/status/1120150561225986048","url":"https://booth.pm/ja/items/1327242","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1327242/520e577f-3461-4b83-82ca-5b387ad8ea2e_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kh0JUCve3+wgk3yBqkbnM1C4paLW/nB1z+V11yvzZbk="></script>
+    nonce="+srnm9LSC4XCbU+O2DBO5oDFlmqulL7GksfdS2iawj0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1327242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1327242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
