--- a/VRChat/20/1327220.html
+++ b/VRChat/20/1327220.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iFLb16OsmQ+wBPXpaasVsh2wl0t1XHJovZmlNaVYLzs="></script>
+    "XIk3dFw88FndFC7kFyW2G/nnybv58IRD5rPXQEuZiRc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル「大太刀」","description":"VRChat向けオリジナル3Dモデル「大太刀」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータをダウンロード及び購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n\n●モデルデータ\n・oodachi.fbx\n2メッシュで構成されているモデルデータです。三角ポリゴン数：8981\n\n\n●プレハブ\n・oodachi.prefab　抜刀状態の刀\n・oodachi +saya.prefab　納刀状態の刀\n\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\n\n●マテリアル\n・base.mat\n※Arktoon shaderで設定をしているため、Arktoon shaderを導入していない場合エラーが起きます。\n\n●各マテリアルごとのテクスチャ\n・AlbedoTransparency.png　通常では使用していません。\n・MetallicSmoothness.png\n・Normal.png\n・2Dview.png　基本色としてマテリアルに登録をしているテクスチャです。\nAlbedoTransparency.pngをマテリアルに登録するとある程度アニメ寄りなフラットな見た目になります。\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。\n","url":"https://booth.pm/ja/items/1327220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1327220/ed93a7be-93a4-4361-bb6c-317e6db61d41_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iFLb16OsmQ+wBPXpaasVsh2wl0t1XHJovZmlNaVYLzs="></script>
+    nonce="XIk3dFw88FndFC7kFyW2G/nnybv58IRD5rPXQEuZiRc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1327220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               248
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1327220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               248
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
