--- a/VRChat/43/1326943.html
+++ b/VRChat/43/1326943.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U7DB0KXObhBVfwU40Tmbs8/kcsLnl2Mie17O0QmNcfU="></script>
+    "SSfgrdVucmX/49Aq9qPXUhcVrGNO8pNMxQt2E9OZsJM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"太鼓橋　３Dモデル","description":"Verts:5,106\nTris:8,280\n\n太鼓橋です。\n日本風のワールド作成にお役立てください。\n\n\nノーマルマップ及びスペキュラーマップを同梱していますのでお好みで設定してください。\n\n内容物----------------\n\nArched bridge.fbx\n\nTaikobashi.obj\nTaikobashi.mtl\n\nread.txt（利用規約）\n\n【Texturesフォルダ】\nTaikobashi.jpg\nTaikobashi-Nomal.jpg\ntaikobasi-Specular.png\n-----------------------","url":"https://booth.pm/ja/items/1326943","offers":{"priceCurrency":"JPY","@type":"Offer","price":"650"},"image":"https://booth.pximg.net/c/620x620/01dc1112-4606-408e-8edd-553bdac9acd1/i/1326943/db63c87b-8269-4438-834f-7cadeef1d931_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U7DB0KXObhBVfwU40Tmbs8/kcsLnl2Mie17O0QmNcfU="></script>
+    nonce="SSfgrdVucmX/49Aq9qPXUhcVrGNO8pNMxQt2E9OZsJM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1326943/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1326943/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
