--- a/VRChat/95/1326595.html
+++ b/VRChat/95/1326595.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hCJK+GlLVLKdUUkFmGV1SpcGivVMULYijB4PWsAi4YY="></script>
+    "hfD1ydAERJDLRjLAG5Lnu5/VW0Uf1R0dQYq1xI7Uysk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】アイドル風ドレスセット青【販売終了】","description":"本商品は配布と販売を終了させていただきました。\n既に本商品をお持ちの方は、引き続きご使用いただけます。\n長らくのご利用、誠にありがとうございました。\n\nThis product is no longer distributed and sold.\nIf you already have this product, you can continue to use it.\nThank you very much.","url":"https://booth.pm/ja/items/1326595","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/e0c00f80-a6ee-49d6-8710-f6624f57e422/i/1326595/c6fe8034-49c9-40b4-a8c5-73deb58fed0d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hCJK+GlLVLKdUUkFmGV1SpcGivVMULYijB4PWsAi4YY="></script>
+    nonce="hfD1ydAERJDLRjLAG5Lnu5/VW0Uf1R0dQYq1xI7Uysk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -168,7 +170,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1326595/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               182
@@ -183,14 +185,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1326595/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               182
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
